<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HelloInternationalization3" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCU-uK-r3H">
                                <rect key="frame" x="184" y="231" width="46" height="30"/>
                                <state key="normal" title="Button"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="button"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <segue destination="koT-Rm-4wL" kind="show" id="KA3-7s-rPC"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="FCU-uK-r3H" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="187" id="xZe-QG-hPk"/>
                            <constraint firstItem="FCU-uK-r3H" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yT6-HN-Oyf"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="28" y="21"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="tFC-Ls-NXQ">
            <objects>
                <viewController id="koT-Rm-4wL" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Rbt-1h-KMt">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aJ-pO-gnw">
                                <rect key="frame" x="187.5" y="238" width="39" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="hello"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="5aJ-pO-gnw" firstAttribute="centerX" secondItem="KjC-tW-BCe" secondAttribute="centerX" id="n5v-5m-gCP"/>
                            <constraint firstItem="5aJ-pO-gnw" firstAttribute="top" secondItem="KjC-tW-BCe" secondAttribute="top" constant="194" id="qTa-tY-oB9"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="KjC-tW-BCe"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BXn-Qm-2mM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="768" y="21"/>
        </scene>
    </scenes>
</document>
